--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,19 @@ div.RichEditor-root{
 }
 div.sidemenu{
     margin-top: -1px;
-    vertical-align: middle;
-    border: 1px solid blue; float: left; width: 20%;
+    border: 1px solid blue;
+    float: left;
+    width: 15%;
     height:100%;
-    
-}
-div.btn-group-vertical{
-    text-align: center;
+
 }
 
 div.editspace{
-    border: 1px solid red; float:right;width: 80%;
-    
+    border: 1px solid red; float:right;width: 85%;
+    background: #fff;
+
 }
+
 
 .RichEditor-root {
   background: #fff;
@@ -24,12 +24,13 @@ div.editspace{
   font-family: 'Georgia', serif;
   font-size: 14px;
   padding: 15px;
+
 }
 
 .RichEditor-editor {
   border-top: 1px solid #ddd;
   cursor: text;
-  font-size: 20px; /*쓰는곳 폰트 사이즈*/
+  font-size: 20px;  /*쓰는곳 폰트 사이즈*/
   margin-top: 10px;
 }
 
