--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,28 +1,35 @@
 .logo {
     height: 200px;
     background-color: #212529;
-    width: 100vw;
+    /*width: 100vw;*/
     line-height: 3.5rem;
     color: white;
     font-size: 1.5rem;
     font-weight: bold;
     text-align: center;
-    padding: 50px;
+    /*padding: 50px;*/
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 30px;
 }
 
 .menu {
     background-color: #343a40;
     height: 3.5rem;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 10px;
 }
 
 .menu-item {
     display: inline-block;
     color: white;
-    font-size: 1rem;
+    font-size: 15px;
     line-height: 3.5rem;
-    width: 20%;
+    width: 10%;
     text-align: center;
     cursor: pointer;
+    background-color: #212529; 
     transition: background-color 0.3s;
     text-decoration: none;
 }
