--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,9 +1,9 @@
 .logo {
     height: 200px;
-    background-color: #212529;
+    background-color: #ff3a34;
     /*width: 100vw;*/
     line-height: 3.5rem;
-    color: white;
+    color: black;
     font-size: 1.5rem;
     font-weight: bold;
     text-align: center;
@@ -14,7 +14,7 @@
 }
 
 .menu {
-    background-color: #343a40;
+    background-color: #ff3a34;
     height: 3.5rem;
     margin-left: 30px;
     margin-right: 30px;
@@ -29,15 +29,16 @@
     width: 10%;
     text-align: center;
     cursor: pointer;
-    background-color: #212529; 
+    background-color: #c40701;
     transition: background-color 0.3s;
     text-decoration: none;
 }
 
 .menu-item:hover {
-    background-color: #495057;
+    background-color: #772727;
 }
 
 .menu-item:active, .menu-item.active {
-    background-color: #1862ab;
+    background-color: #581309;
+    color:gray;
 }
