--- a/src/components/PostLinks.css
+++ b/src/components/PostLinks.css
@@ -1,10 +1,14 @@
 .post-links a {
     display: block;
     text-align: center;
+    
     text-decoration: none;
     background-color: #495057;
     color: white;
-    padding: 0.5rem;
+    /*margin-left: 30px;*/
+    font-size: 30px;
+    /*margin-right:30px;*/
+    /*width:20%;*/
     transition: background .3s;
 }
 
@@ -14,4 +18,8 @@
 
 .post-links a:active {
     background-color: #343a40;
+}
+
+.one{
+    color:black;
 }
