--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -1,19 +1,22 @@
 .HomePage{
     margin-left: 30px;
     margin-right:30px;
-    text-align: center;
+    /*text-align: center;*/
 }
 
 .editspace{
-    display: inline-block;
+    /*display: inline-block;*/
+    float:right;
     width : 80%;
 
 }
-
+.savebutton{
+    align-content: center;
+}
 .SideMenu{
     display: inline-block;
     width:20%;
-    height:100%;
+    height:600px;
     border : 1px solid red;
-    background-color: #a1c918;
+    /*background-color: #a1c918;*/
 }
