add a input title in home

--- a/src/containers/Account.css
+++ b/src/containers/Account.css
@@ -2,3 +2,15 @@
     margin-left: 30px;
     margin-right: 30px;
 }
+
+.SideMenuAccount{
+    border :1px black !important;
+    width:20%;
+    margin-right: 1%;
+    float :left;
+
+}.accountspace{
+    display: inline-block;
+    width:79%;
+    background-color: #2d2470;
+}
