--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -11,11 +11,12 @@
 
 }
 .savebutton{
-    align-content: center;
+
 }
 .SideMenu{
     display: inline-block;
-    width:20%;
+    width:19%;
+    margin-right: 1%;
     height:600px;
     border : 1px solid red;
     /*background-color: #a1c918;*/
