--- a/src/containers/Account.css
+++ b/src/containers/Account.css
@@ -12,5 +12,5 @@
 }.accountspace{
     display: inline-block;
     width:79%;
-    background-color: #2d2470;
+    /*background-color: #2d2470;*/
 }
