--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,7 +8,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     text-align: center;
-    
+	min-width: 700px;
     /*padding: 50px;*/
 
 }
@@ -16,8 +16,9 @@
 .clock {
     margin-left:40px;
     margin-right:40px;
-    background-color:#91bfa7; 
+    background-color:#91bfa7;
     text-align: center;
+    min-width: 700px;
     font-size:15px;
 }
 .menu {
@@ -25,6 +26,7 @@
     margin-left:40px;
     margin-right:40px;
     height: 3.5rem;
+    min-width: 700px;
 }
 
 .menu-item {
